[tool.poetry]
name = "ns-3-40"
version = "0.1.0"
description = ""
authors = ["Daler <dollar.daler@gmail.com>"]
readme = "README.md"
packages = [{include = "ns_3"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.0"
matplotlib = "^3.8.2"
pydantic = "^2.6.1"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
